fix: reduced footer margin to prevent x-scrollbar

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -80,7 +80,7 @@
     }
 
     .login-footer {
-        margin-top: 140px;
+        margin-top: 40px;
     }
 }
 
@@ -100,6 +100,7 @@
     .login-card {
         max-width: 310px;
     }
+
     .login-title {
         font-size: 47px;
     }
@@ -109,9 +110,9 @@
     .login-card {
         max-width: 280px;
         padding: 48px 28px;
-        }
+    }
 
-     .login-buttons {
+    .login-buttons {
         flex-direction: column;
         gap: 12px;
     }
@@ -119,7 +120,7 @@
     .login-title {
         font-size: 43px;
     }
-    
+
     .login-logo {
         width: 60px;
     }
@@ -146,7 +147,7 @@
         max-width: 240px;
     }
 
-    .login-buttons button{
+    .login-buttons button {
         font-size: 18px;
     }
 
